--- a/index.html
+++ b/index.html
@@ -17,22 +17,39 @@
       <span class="navbar-brand ms-3 mb-0 h1">TV Series</span>
     </nav>
 
-    <main class="m-4">
-      <table class="table" style="width: auto">
-        <caption>
-          Seasons average:
-          <span></span>
-        </caption>
-        <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">Name</th>
-            <th scope="col">Channel</th>
-            <th scope="col">Seasons</th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
+    <main class="container m-4">
+      <div class="row">
+        <div class="col-md-auto">
+          <table class="table table-hover" style="width: auto">
+            <caption>
+              Seasons average:
+              <span></span>
+            </caption>
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Name</th>
+                <th scope="col">Channel</th>
+                <th scope="col">Seasons</th>
+              </tr>
+            </thead>
+            <tbody></tbody>
+          </table>
+        </div>
+
+        <div
+          class="card col-md-auto p-0 ms-4"
+          id="serie-detail"
+          style="width: 18rem; display: none"
+        >
+          <img src="" alt="" class="card-img-top" />
+          <div class="card-body">
+            <h5 class="card-title"></h5>
+            <p class="card-text"></p>
+            <a href=""></a>
+          </div>
+        </div>
+      </div>
     </main>
 
     <script type="module" src="./main.js"></script>
